# factpulse_billing_app_public

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.json  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.selfhosted.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  render.yaml
.github/workflows/: ci.yml
apps/assistant/tests/: test_registry.py  test_symmetry.py  test_tools.py  test_urls_helper.py
apps/assistant/tools/: __init__.py  converters.py  customers.py  dashboard.py  invoices.py  products.py  registry.py  sirene.py  suppliers.py  urls.py
apps/billing/: admin.py  constants.py  factories.py  filters.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/billing/migrations/: 0001_initial.py  0002_initial.py  0003_supplier_notes_payment_terms.py  0004_archived_fields.py  0005_alter_supplier_note_pmd.py  0006_add_transmitting_status.py  0007_add_cdar_flow_id.py  0008_add_refused_status.py  0009_remove_cdar_flow_id.py  0010_add_org_number_index.py  0011_alter_invoice_pdf_file_alter_supplier_logo_and_more.py  0012_alter_supplier_logo.py  0013_flow_detection.py  0014_ereporting_fields.py  0015_alter_invoiceauditlog_action.py  0016_alter_invoice_status.py
apps/billing/services/: customer_service.py  flow_detector.py  invoice_service.py  numbering_service.py  payload_builder.py  resolution_service.py  sirene_client.py  state_machine.py
apps/billing/tests/: test_flow_detector.py  test_invoice_service.py  test_models.py  test_numbering_service.py  (+5 more)
apps/core/: admin.py  apps.py  authentication.py  backends.py  exceptions.py  fields.py  middleware.py  models.py  permissions.py  schema.py  serializers.py  services.py  tests.py  throttling.py  tokens.py  views.py
apps/factpulse/: apps.py  client.py  signals.py  tasks.py  tests.py
apps/mcp/: asgi.py  middleware.py  server.py  tests.py
apps/oauth/: apps.py  tests.py  urls.py  views.py
apps/payments/: adapters.py  admin.py  conftest.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/ui/: context_processors.py  tests.py  urls.py
apps/webhooks/: admin.py  events.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
config/: asgi.py  celery.py  health.py  urls.py  views.py
config/settings/: base.py  dev.py  prod.py
docs/: api-guide.md  backup.md  deployment.md  mcp-guide.md  portal-guide.md
nginx/: example.conf
static/css/: main.css
static/favicon/: site.webmanifest
static/js/: invoice-calculator.js
templates/: base.html
templates/oauth2_provider/: authorize.html  authorized.html
templates/pdf/: invoice.html
templates/registration/: email_verification.html  password_reset_email.html
tests/: test_docs.py
(+55 files in other folders)
